** Please denote the date and your name behind your documented changes! **
**************************************************************************

*Other Changes / Optimizations:
	- filenames which should be omitted during xsl export are now extracted and accessible
	  via bundle.properties -> ".svn" files/folders are now omitted (27.04.11 - Malte)

*BugFixes:
	- last introduced bug fixed in ReviewAccess (Malte)

*Refactoring (Malte):
	- added refreshViews function to ViewControl
	- dataaccess.SaveHandler moved to dataaccess.handler.SaveHandler
	- therefore applied changes in
		views.reviewexplorer.handler.ActivateReviewHandler
		views.reviewexplorer.handler.OpenCloseReviewHandler
		plugincontrol.refactoring.ExecutionListener
		plugincontrol.DeleteCommentHandler
		dataaccess.handler.CleanupHandler
		dataaccess.handler.SaveHandler

*Visibility Changes (Malte):
	ExportReviewDataWizardPage:
		methods:
			getExportPath		public -> protected
			getTemplatePath		public -> protected
	NewReviewWizard:
		attributes:
			page1				none -> private
	NewReviewWizardPage
		methods:
			getReviewID			public -> protected
			getReviewReference	public -> protected
			getReviewResponsibility	public -> protected
			getReviewDescription public -> protected
	AnnotationParser
		attributes:
			tagRegex			protected -> private
			tagPattern			protected -> private
			idPositionMap		protected -> private
			idTagPositions		protected -> private
			displayedComments	protected -> private
			document			protected -> private
			editor				protected -> private
			annotationModel		protected -> private

*Deletions (Malte):
	ExportReviewDataWizardPage:
		methods:
			getSelectedReviewIDs
			
*Code refactoring of often used references (Malte):
	-> extract uses of classes implementing singleton-pattern as class attributes for better
		visibility according to documentation. This was done in:
			Class												(Variables)
			export.XSLExport									(ReviewAccess)